# simple_telegram_bot

./: main.py  pyproject.toml
simple_telegram_bot/: __init__.py  base.py  constants.py  exeptions.py  logger.py  updaters.py
simple_telegram_bot/structures/: user.py
